feat(backend): reconfigure Elasticsearch, add Elasticsearch support for Post, and update mappers